--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.39",
@@ -44,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.3.0",
+    "react-test-renderer": "^18.1.0"
   }
 }
